--- a/project.config
+++ b/project.config
@@ -1,6 +1,5 @@
 [project]
 	description = Kernel tree for Qualcomm chipsets
-	state = active
 [receive]
 	requireSignedOffBy = true
 [submit]
@@ -9,3 +8,8 @@
 	inheritFrom = Kernel-Projects
 [access "refs/heads/*"]
 	owner = group kernel-owners
+[access "refs/heads/android-msm-flo-3.4-jb-mr2"]
+	create = group AOSP
+	forgeAuthor = group AOSP
+	forgeCommitter = group AOSP
+	push = group AOSP
