--- a/arch/arm/boot/dts/qcom/fsm9900.dtsi
+++ b/arch/arm/boot/dts/qcom/fsm9900.dtsi
@@ -1669,6 +1669,7 @@
 				<87 512 0 0>,
 				<87 512 60000 960000>;
 		qcom,max-nominal-sysclk-rate = <100000000>;
+		qcom,bus-clk-rate = <320000000 200000000 100000000>;
 	};
 
 	android_usb@fe8050c8 {
