Allow kernel-approvers to vote +2, verified +1 and submit on android-msm-marlin-3.18-nougat-mr1-eas-experimental.
Change-Id: I33b31c1ce0185b9c440726fccd77bd298b095032
BUG: 34808107

--- a/project.config
+++ b/project.config
@@ -26,3 +26,7 @@
 	label-Code-Review = -2..+2 group kernel-approvers
 	label-Verified = -1..+1 group kernel-approvers
 	submit = group kernel-approvers
+[access "refs/heads/android-msm-marlin-3.18-nougat-mr1-eas-experimental"]
+	label-Code-Review = -2..+2 group kernel-approvers
+	label-Verified = -1..+1 group kernel-approvers
+	submit = group kernel-approvers
